--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             height: 100px;
             border-radius: 100%;
             border: 2px solid white;
-            background-image: url('https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/free_myprofile/%EB%B3%B4%EB%9D%BC+%EB%A5%B4%ED%83%84%EC%9D%B4/%EB%B3%B4%EB%9D%BC%EB%A5%B4%ED%83%84_%ED%94%84%EB%A1%9C%ED%95%84.png');
+            background-image: url('최샴.jpg');
             background-position: center;
             background-size: cover;
         }
