--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:title" content="SAP Architecture">
-    <meta property="og:description" content="최샴입니다.>
-    <meta property="og:image" content="최샴.jpg">
+    <meta property="og:title" content="보라보라한 르탄이">
+    <meta property="og:description" content="힙한 취미 코딩!">
+    <meta property="og:image" content="https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/free_myprofile/%EB%B3%B4%EB%9D%BC+%EB%A5%B4%ED%83%84%EC%9D%B4/%EB%B3%B4%EB%9D%BC%EB%A5%B4%ED%83%84_%ED%94%84%EB%A1%9C%ED%95%84.png">
 <!--    <script type="text/javascript" src="https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/free/sparta.js"></script> -->
     <title>&#128304; 응용 프로그래머 최샴</title>
     <style>
@@ -115,6 +115,7 @@
         <div class="profile"></div>
         <h1 class="main">최 샴</h1>
         <p class="sub">&#128304; 응용 프로그래머 &#128304;</p>
+        <a class="bigbutton"target="_blank" href="https://choishiam.notion.site/SAP-Architecture-b2abff7bbe9b42f4880657c8a7ff8bd2/">노션 페이지</a>
         <div class="buttons">
             <a class="minibutton" target="_blank" href="https://www.linkedin.com/in/%EA%B8%B0%ED%97%8C-%EC%B5%9C-7b04ab1b9/">링크드인</a>
             <a class="minibutton"target="_blank" href="https://choishiam.tistory.com/">블로그</a>
