--- a/index.html
+++ b/index.html
@@ -115,7 +115,8 @@
         <div class="profile"></div>
         <h1 class="main">최 샴</h1>
         <p class="sub">&#128304; 응용 프로그래머 &#128304;</p>
-        <a class="bigbutton"target="_blank" href="https://choishiam.notion.site/SAP-Architecture-b2abff7bbe9b42f4880657c8a7ff8bd2/">노션 페이지</a>
+<!--        <a class="bigbutton"target="_blank" href="https://choishiam.notion.site/SAP-Architecture-b2abff7bbe9b42f4880657c8a7ff8bd2/">노션 페이지</a> -->
+
         <div class="buttons">
             <a class="minibutton" target="_blank" href="https://www.linkedin.com/in/%EA%B8%B0%ED%97%8C-%EC%B5%9C-7b04ab1b9/">링크드인</a>
             <a class="minibutton"target="_blank" href="https://choishiam.tistory.com/">블로그</a>
